Fix scrollbar at high width

--- a/_sass/post_specific.sass
+++ b/_sass/post_specific.sass
@@ -70,7 +70,7 @@
 
   @media screen and (min-width: $hd-breakpoint)
     .sidenote img, .marginnote img
-      max-width: 200%
+      max-width: 150%
 
 .mailchimp
   .email
